feat: cdn link added
http://servicesforvscode.000webhostapp.com/handler.js

the link is available at my deepp0707 acc

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,9 @@
 
 
   <script src="./handler.js"></script>
+  <!-- use cdn link to make it work in production -->
+  <!-- <script src="http://servicesforvscode.000webhostapp.com/handler.js"></script> -->
+
 
 </body>
 
